added is_independent field to registrations model and implemented corresponding features

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -107,6 +107,7 @@
 							</button>
 						</th>
 						<th></th>
+						<th ng-show="istVorstand">Independent (sieht nur Vorstand)</th>
 						<th ng-show="istVorstand">Funding (sieht nur Vorstand)</th>
 						<th ng-show="istVorstand">Email (sieht nur Vorstand)</th>
 						<th ng-show="istVorstand">Essen (sieht nur Vorstand)</th>
@@ -154,6 +155,8 @@
 								<i class="fa fa-trash-o" aria-hidden="true"></i>
 							</button>
 						</td>
+						<td ng-show="istVorstand && users.pivot_is_independent"><i class="fa fa-check" aria-hidden="true"></i></td>
+						<td ng-hide="istVorstand && users.pivot_is_independent"><i class="fa fa-times" aria-hidden="true"></i></td>
 						<td ng-show="istVorstand && users.pivot_funding"><i class="fa fa-check" aria-hidden="true"></i></td>
 						<td ng-hide="istVorstand && users.pivot_funding"><i class="fa fa-times" aria-hidden="true"></i></td>
 						<td ng-show="istVorstand">{{users.email}}</td>
