migrated user pics to new ftp location

--- a/public/finances.html
+++ b/public/finances.html
@@ -68,7 +68,7 @@
 						<img data-ng-show="user.image"
 							 style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;"
 							 class="img-hor"
-							 ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" alt="profile image"/>
+							 ng-src="http://debating.de/members_area/userpics/{{user.image}}" alt="profile image"/>
 						<img data-ng-hide="user.image"
 							 style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;"
 							 class="img-hor" src="images/bdu_quad.png" alt="">
