--- a/public/showImageDialog.html
+++ b/public/showImageDialog.html
@@ -6,7 +6,7 @@
 </nav>
 
 <div class="col-sm-12">
-    <img style="height: 100%; width: 100%; border:4px solid gainsboro; border-radius: 0%;" class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{imgDialogURL}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+    <img style="height: 100%; width: 100%; border:4px solid gainsboro; border-radius: 0%;" class="img-hor" ng-src="http://debating.de/members_area/userpics/{{imgDialogURL}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
 </div>
 
 <div class="ngdialog-buttons" style="padding-top: 10px">
