migrated user pics to new ftp location

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -119,7 +119,7 @@
 						<td>
 							<a href="" ng-click="ShowImageDialog(users.vorname, users.image)">
 								<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor"
-									 ng-src="http://debating.de/members_area/userpics/{{users.image}}"
+									 ng-src="http://root.debating.de/members_area/userpics/{{users.image}}"
 									 onerror="this.src='images/bdu_quad.png'" alt=""/>
 							</a>
 						</td>
