--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,7 @@
 				<div class="image-cropper">
 					<!--<a href="#/imageUpload">-->
 					<a href="#/profile">
-						<img class="img-hor" ng-src="http://debating.de/members_area/userpics/{{user.image}}"
+						<img class="img-hor" ng-src="http://root.debating.de/members_area/userpics/{{user.image}}"
 							 onerror="this.src='images/bdu_quad.png'"/>
 						<!--<p>Add your<br>profile picture</p>-->
 						<p>Profile upload at the <br>
