--- a/public/imageUpload.html
+++ b/public/imageUpload.html
@@ -19,23 +19,24 @@
 					Your profile pic will be stored on the BDU server.<br>
 					If you upload a new profile pic, your old one will be deleted from the server.
 				</p>
-				<button ng-hide="submit" class="btn btn-outline-primary" ngf-select ng-model="picFile" accept="image/*" ng-click="submit = !submit">Select Picture</button>
-				<div ng-show="submit">
+				<button data-ng-hide="submit" class="btn btn-outline-primary" ngf-select data-ng-model="picFile"
+						accept="image/*" data-ng-click="submit = !submit">Select Picture</button>
+				<div data-ng-show="submit">
 					<a href="#/profile"><button class="btn btn-outline-danger">Cancel</button></a>
-					<button class="btn btn-outline-success" ng-click="upload(croppedDataUrl, picFile.name)">Submit</button>
+					<button class="btn btn-outline-success" data-ng-click="upload(croppedDataUrl, picFile.name)">Submit</button>
 				</div>
-				<div ngf-drop ng-model="picFile" ngf-pattern="image/*" class="cropArea">
-					<img-crop image="picFile  | ngfDataUrl" result-image="croppedDataUrl" ng-init="croppedDataUrl=''"></img-crop>
+				<div ngf-drop data-ng-model="picFile" ngf-pattern="image/*" class="cropArea">
+					<img-crop image="picFile  | ngfDataUrl" result-image="croppedDataUrl" data-ng-init="croppedDataUrl=''"></img-crop>
 				</div>
 				<div>
-					<img ng-src="{{croppedDataUrl}}" />
+					<img data-ng-src="{{croppedDataUrl}}" />
 				</div>
 
-				<span class="progress" ng-show="progress >= 0">
-					<div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+				<span class="progress" data-ng-show="progress >= 0">
+					<span style="width:{{progress}}%" data-ng-bind="progress + '%'"></span>
 				</span>
-				<span ng-show="result">Upload Successful</span>
-				<span class="err" ng-show="errorMsg">{{errorMsg}}</span>
+				<span data-ng-show="result">Upload Successful</span>
+				<span class="err" data-ng-show="errorMsg">{{errorMsg}}</span>
 			</form>
 		</div>
 	</div>
