--- a/public/profile.html
+++ b/public/profile.html
@@ -3,13 +3,10 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="image-cropper">
-					<!--<a href="#/imageUpload">-->
-					<a href="#/profile">
-						<img class="img-hor" ng-src="http://root.debating.de/members_area/userpics/{{user.image}}"
+					<a href="#/imageUpload">
+						<img class="img-hor" src="http://root.debating.de/members_area/userpics/{{user.image}}"
 							 onerror="this.src='images/bdu_quad.png'"/>
-						<!--<p>Add your<br>profile picture</p>-->
-						<p>Profile upload at the <br>
-							moment not possible.</p>
+						<p>Add your<br>profile picture</p>
 					</a>
 				</div>
 				<div class="intro-text">
