changed label for gender to non-binary

--- a/public/profile.html
+++ b/public/profile.html
@@ -62,7 +62,7 @@
 									<option value=""></option>
 									<option value="f">female</option>
 									<option value="m">male</option>
-									<option value="-">post</option>
+									<option value="-">non-binary</option>
 								</select>
 							</td>
 						</tr>
