--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -22,22 +22,22 @@
 					<tr>
 						<!--<th></th>-->
 						<th class="hidden-xs">
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortTournaments('id')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortTournaments('id')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Tournament ID
 							</button>
 						</th>
 						<th>
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortTournaments('name')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortTournaments('name')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Name
 							</button>
 						</th>
 						<th class="hidden-xs">
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortTournaments('startdate')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortTournaments('startdate')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Startdate
 							</button>
 						</th>
 						<th>
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortTournaments('language')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortTournaments('language')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Language
 							</button>
 						</th>
@@ -45,8 +45,8 @@
 					</tr>
 					</thead>
 					<tbody class="left-align">
-					<tr class="pointer" ng-repeat="tournaments in tournamentsusers" ng-click="goToUsers(tournaments)"
-						ng-class="{'bg-light-grey': tournaments.isOld}">
+					<tr class="pointer" data-ng-repeat="tournaments in tournamentsusers" data-ng-click="goToUsers(tournaments)"
+						data-ng-class="{'bg-light-grey': tournaments.isOld}">
 						<td class="hidden-xs">
 							{{tournaments.id}} &nbsp;
 							<i data-ng-show="tournaments.hasOpenReg && istVorstand"
@@ -67,59 +67,59 @@
 			<div id="users" class="col-md-12">
 
 				<h3>{{tournament.name}}</h3>
-				<table ng-show="showUsers" class="table table-hover table-responsive">
+				<table data-ng-show="showUsers" class="table table-hover table-responsive">
 					<thead>
 					<tr>
 						<th class="hidden-xs">
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('id')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('id')">
 								<i class="fa fa-sort" aria-hidden="true"></i> User ID
 							</button>
 						</th>
 						<th></th>
 						<th>
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('name')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('name')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Name
 							</button>
 						</th>
 						<th>
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('pivot_role')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('pivot_role')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Role
 							</button>
 						</th>
 						<th>
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('pivot_teamname')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('pivot_teamname')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Teamname
 							</button>
 						</th>
 						<th class="hidden-xs">
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('pivot_comment')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('pivot_comment')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Comment
 							</button>
 						</th>
 						<th class="hidden-xs hidden-sm">
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('pivot_created_at')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('pivot_created_at')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Registered at
 							</button>
 						</th>
 						<th>
-							<button class="btn btn-outline-info btn-sm pointer" ng-click="sortUsers('pivot_attended')">
+							<button class="btn btn-outline-info btn-sm pointer" data-ng-click="sortUsers('pivot_attended')">
 								<i class="fa fa-sort" aria-hidden="true"></i> Attended
 							</button>
 						</th>
 						<th></th>
-						<th ng-show="istVorstand">Independent (sieht nur Vorstand)</th>
-						<th ng-show="istVorstand">Funding (sieht nur Vorstand)</th>
-						<th ng-show="istVorstand">Email (sieht nur Vorstand)</th>
-						<th ng-show="istVorstand">Essen (sieht nur Vorstand)</th>
+						<th data-ng-show="istVorstand">Independent (sieht nur Vorstand)</th>
+						<th data-ng-show="istVorstand">Funding (sieht nur Vorstand)</th>
+						<th data-ng-show="istVorstand">Email (sieht nur Vorstand)</th>
+						<th data-ng-show="istVorstand">Essen (sieht nur Vorstand)</th>
 					</tr>
 					</thead>
 					<tbody class="left-align">
-					<tr ng-repeat="users in tournament.users">
+					<tr data-ng-repeat="users in tournament.users">
 						<td class="text-center hidden-xs">{{users.id}}</td>
 						<td>
-							<a href="" ng-click="ShowImageDialog(users.vorname, users.image)">
+							<a href="" data-ng-click="ShowImageDialog(users.vorname, users.image)">
 								<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor"
-									 ng-src="http://root.debating.de/members_area/userpics/{{users.image}}"
+									 data-ng-src="http://root.debating.de/members_area/userpics/{{users.image}}"
 									 onerror="this.src='images/bdu_quad.png'" alt=""/>
 							</a>
 						</td>
@@ -132,35 +132,28 @@
 						<td class="hidden-xs hidden-sm">{{users.pivot_created_at | date:'medium'}}</td>
 
 						<!--ATTENDED INFO AND BUTTON-->
-						<td ng-show="users.pivot_attended == 0" class="text-center">
-							<i class="fa fa-times" aria-hidden="true"></i>
-							<br>
-							<button ng-show="istVorstand" class="btn btn-sm btn-outline-primary" ng-click="went(users.pivot_role, users.pivot_id, 2)">Can Go</button>
-						</td>
-						<td ng-show="users.pivot_attended == 2" class="text-center">
-							<i class="fa fa-times" aria-hidden="true"></i>
-							<br>
-							<button ng-show="istVorstand" class="btn btn-sm btn-outline-primary" ng-click="went(users.pivot_role, users.pivot_id, 1)">Went</button>
-							<button ng-show="istVorstand" class="btn btn-sm btn-secondary" ng-click="undoAttendance(users.pivot_id)">Undo</button>
-						</td>
-						<td ng-show="users.pivot_attended == 1" class="text-center">
-							<i class="fa fa-check" aria-hidden="true"></i>
-							<br>
-							<button ng-show="istVorstand" class="btn btn-sm btn-secondary" ng-click="undoAttendance(users.pivot_id)">Undo</button>
+						<td class="text-center">
+							<p data-ng-hide="istVorstand">{{attendanceStatus(users.pivot_attended)}}</p>
+							<select id="attendanceSelect" class="form-control" data-ng-show="istVorstand"
+									data-ng-change="setAttendance(users.pivot_role, users.pivot_id, users.pivot_attended)"
+									data-ng-options="status.id as status.label for status in attendanceStatuses"
+									data-ng-model="users.pivot_attended"></select>
 						</td>
 
 						<!--DELETE BUTTON-->
-						<td ng-show="(users.id == user.id && !users.pivot_attended) || istVorstand ">
-							<button ng-click="delete(users.pivot_id)" class="btn btn-outline-danger">
+						<td data-ng-show="(users.id == user.id && !users.pivot_attended) || istVorstand ">
+							<button data-ng-click="delete(users.pivot_id)" class="btn btn-outline-danger">
 								<i class="fa fa-trash-o" aria-hidden="true"></i>
 							</button>
 						</td>
-						<td ng-show="istVorstand && users.pivot_is_independent"><i class="fa fa-check" aria-hidden="true"></i></td>
-						<td ng-hide="istVorstand && users.pivot_is_independent"><i class="fa fa-times" aria-hidden="true"></i></td>
-						<td ng-show="istVorstand && users.pivot_funding"><i class="fa fa-check" aria-hidden="true"></i></td>
-						<td ng-hide="istVorstand && users.pivot_funding"><i class="fa fa-times" aria-hidden="true"></i></td>
-						<td ng-show="istVorstand">{{users.email}}</td>
-						<td ng-show="istVorstand">{{users.food}}</td>
+						<td data-ng-show="istVorstand">
+							<i data-ng-class="isIndependentClass(user.pivot_is_independent)" aria-hidden="true"></i>
+						</td>
+						<td data-ng-show="istVorstand">
+							<i data-ng-class="getsFundingClass(user.pivot_funding)" aria-hidden="true"></i>
+						</td>
+						<td data-ng-show="istVorstand">{{users.email}}</td>
+						<td data-ng-show="istVorstand">{{users.food}}</td>
 					</tr>
 					</tbody>
 				</table>
