added independent label

--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -60,6 +60,7 @@
 	</div>
 	<div class="row">
 		<div class="col-12 pretty-checkbox">
+			<p><b>Independent?</b></p>
 			<div class="form-check">
 				<input data-ng-model="is_independent" class="form-check-input" type="radio"
 					   id="independentRadioYes" data-ng-change="independentChangeEvent()" value="1">
