fixed wrong label

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -147,10 +147,10 @@
 							</button>
 						</td>
 						<td data-ng-show="istVorstand">
-							<i data-ng-class="isIndependentClass(user.pivot_is_independent)" aria-hidden="true"></i>
+							<i data-ng-class="isIndependentClass(users.pivot_is_independent)" aria-hidden="true"></i>
 						</td>
 						<td data-ng-show="istVorstand">
-							<i data-ng-class="getsFundingClass(user.pivot_funding)" aria-hidden="true"></i>
+							<i data-ng-class="getsFundingClass(users.pivot_funding)" aria-hidden="true"></i>
 						</td>
 						<td data-ng-show="istVorstand">{{users.email}}</td>
 						<td data-ng-show="istVorstand">{{users.food}}</td>
