added authentication functions && colors && started home page

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
         integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
         crossorigin="anonymous">
 
+  <!-- Roboto Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+
   <!-- open graph meta tags -->
   <!--for sharing on facebook and others-->
   <meta property="og:url" content="https://members.debating.de" />
